--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,6 +1,6 @@
 // Here you can add other styles
 .bg-primary {
-    background-color: #2C3E50 !important; /* Dark Blue */
+    background: linear-gradient(135deg, #2C3E50 0%, #1A5276 100%) !important;
 }
 
 // botones
